// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render an active button 1`] = `
<div>
  <button
    class="button active"
    type="button"
  />
</div>
`;

exports[`Render button 1`] = `
<div>
  <button
    class="button"
    type="button"
  >
    <span
      class="label"
    >
      Click
    </span>
  </button>
</div>
`;

exports[`Render button with a different size 1`] = `
<div>
  <button
    class="button small"
    type="button"
  />
</div>
`;

exports[`Render button with a prepended icon 1`] = `
<div>
  <button
    class="button"
    type="button"
  >
    <span
      aria-label="fa-trash-o"
      class="fa fa-trash-o icon"
    />
  </button>
</div>
`;

exports[`Render button with dropdown indicator 1`] = `
<div>
  <button
    class="button"
    type="button"
  >
    <span
      aria-label="su-angle-down"
      class="su-angle-down dropdownIcon"
    />
  </button>
</div>
`;

exports[`Render button with value 1`] = `
<div>
  <button
    class="button"
    type="button"
  >
    <span
      class="label"
    >
      Click
    </span>
  </button>
</div>
`;

exports[`Render button without text 1`] = `
<div>
  <button
    class="button"
    type="button"
  />
</div>
`;

exports[`Render disabled button 1`] = `
<div>
  <button
    class="button"
    disabled=""
    type="button"
  />
</div>
`;

exports[`Render loading button 1`] = `
<div>
  <button
    class="button"
    type="button"
  >
    <div
      class="spinner loader"
      style="width: 20px; height: 20px;"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
    <span
      class="label"
    >
      Click
    </span>
  </button>
</div>
`;

exports[`Render primary button 1`] = `
<div>
  <button
    class="button primary"
    type="button"
  >
    <span
      class="label"
    >
      Click
    </span>
  </button>
</div>
`;

exports[`Render primary success button 1`] = `
<div>
  <button
    class="button primary success"
    type="button"
  >
    <span
      class="label"
    >
      Click
    </span>
  </button>
</div>
`;

exports[`Render success button 1`] = `
<div>
  <button
    class="button success"
    type="button"
  >
    <span
      class="label"
    >
      Click
    </span>
  </button>
</div>
`;
